-[Fixes #99] Review internal pages and links to docs

--- a/dev_features.html
+++ b/dev_features.html
@@ -91,7 +91,7 @@ body_class: "geonode-features dev-features"
               <li>Large ecosystem of pluggable apps</li>
               <li>Spatial GeoDjango object-relational mapping available</li>
             </ul>
-            <a href="django.html" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
+            <a href="https://docs.geonode.org/en/master/advanced/index.html#geonode-django-contrib-apps" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
           </div>
         </div>
         <div class="col-6 col-md-4">
@@ -108,17 +108,17 @@ body_class: "geonode-features dev-features"
         </div>
         <div class="col-12 col-md-8 number three">
           <div class="highlighted-box">
-            <h2>Bootstrap and jQuery</strong></h2>
+            <h2>React and Bootstrap</strong></h2>
             <h4>Modern and flexible front-end</h4>
-            <p>GeoNode's front-end is based on the popular and flexible jQuery and Bootstrap frameworks. A set of jQuery JavaScript plugins is used to drive the user interface, and Bootstrap CSS is used to style the pages. Both of these frameworks make it easy to theme and customize your own GeoNode implementation if desired.</p>
+            <p>GeoNode's front-end is based on the popular and flexible React and Bootstrap frameworks.React is used along with Redux and Rxjs to drive the user interface, and Bootstrap CSS is used to style the pages. Both of these frameworks make it easy to theme and customize your own GeoNode implementation if desired.</p>
             <p>Features include:</p>
             <ul class="unstyled">
               <li>Bootstrap CSS framework</li>
-              <li>jQuery JavaScript front-end and plugins</li>
+              <li>React, Redux, Rxjs</li>
               <li>Django templating system</li>
               <li>Customizable themes using LESS and Bootswatch</li>
             </ul>
-            <a href="bootstrap_jquery.html" class="hide btn btn-success">Learn about GeoNode's Front End</a>
+            <a href="https://github.com/GeoNode/geonode-mapstore-client" class="hide btn btn-success">Learn about GeoNode's Front End</a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@ body_class: "geonode-features dev-features"
           <li>GeoServer REST API</li>
           <li>GeoNode search and REST APIs</li>
         </ul>
-        <a href="apis.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
+        <a href="https://docs.geonode.org/en/master/devel/api/index.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
       </div>
     </div>
         <div class="col-6 col-md-4">
