--- a/admin_features.html
+++ b/admin_features.html
@@ -61,7 +61,7 @@ body_class: "geonode-features admin-features"
               <li>Web Map Context (WMC)</li>
               <li>Tile Map Service (TMS)</li>
             </ul>
-            <a href="https://docs.geonode.org/en/master/usage/managing_datasets/index.html" class="hide btn btn-success">Learn about GeoNode for SDI</a>
+            <a href="{{ site.extbase.docs }}usage/managing_datasets/index.html" class="hide btn btn-success">Learn about GeoNode for SDI</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@ body_class: "geonode-features admin-features"
               <li>Integration with GeoServer security at the service level</li>
               <li>Integration with external authentication services</li>
             </ul>
-            <a href="https://docs.geonode.org/en/master/advanced/components/index.html" class="hide btn btn-success">Learn about GeoNode's security framework</a>
+            <a href="{{ site.extbase.docs }}advanced/components/index.html" class="hide btn btn-success">Learn about GeoNode's security framework</a>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@ body_class: "geonode-features admin-features"
               <li>Cache map tiles locally or to a content delivery network (CDN)</li>
             </ul>
 
-            <a href="https://docs.geonode.org/en/master/install/index.html" class="hide hide btn btn-success">Learn about deploying and scaling GeoNode</a>
+            <a href="{{ site.extbase.docs }}install/index.html" class="hide hide btn btn-success">Learn about deploying and scaling GeoNode</a>
           </div>
         </div>
       </div>
