--- a/dev_features.html
+++ b/dev_features.html
@@ -61,7 +61,7 @@ body_class: "geonode-features dev-features"
           <li>Geospatial Python libraries</li>
           <li>OpenLayers and GeoExt Web Mapping Libraries</li>
         </ul>
-        <a href="opensource_geospatial.html" class="hide btn btn-success">Learn about GeoNode's open source geospatial foundation</a>
+        <a href="{{ site.extbase.docs }}start/index.html#geospatial-data-storage" class="hide btn btn-success">Learn about GeoNode's open source geospatial foundation</a>
       </div>
     </div>
   </div>
@@ -91,7 +91,7 @@ body_class: "geonode-features dev-features"
               <li>Large ecosystem of pluggable apps</li>
               <li>Spatial GeoDjango object-relational mapping available</li>
             </ul>
-            <a href="https://docs.geonode.org/en/master/advanced/index.html#geonode-django-contrib-apps" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
+            <a href="{{ site.extbase.docs }}advanced/index.html#geonode-django-contrib-apps" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
           </div>
         </div>
         <div class="col-6 col-md-4">
@@ -118,7 +118,7 @@ body_class: "geonode-features dev-features"
               <li>Django templating system</li>
               <li>Customizable themes using LESS and Bootswatch</li>
             </ul>
-            <a href="https://github.com/GeoNode/geonode-mapstore-client" class="hide btn btn-success">Learn about GeoNode's Front End</a>
+            <a href="{{ site.extbase.docs }}contribute/frontend-development/index.html" class="hide btn btn-success">Learn about GeoNode's Front End</a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@ body_class: "geonode-features dev-features"
           <li>GeoServer REST API</li>
           <li>GeoNode search and REST APIs</li>
         </ul>
-        <a href="https://docs.geonode.org/en/master/devel/api/index.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
+        <a href="{{ site.extbase.docs }}devel/api/index.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
       </div>
     </div>
         <div class="col-6 col-md-4">
