--- a/user_features.html
+++ b/user_features.html
@@ -60,7 +60,7 @@ body_class: "geonode-features user-features"
          <li>Federated OGC services</li>
          <li>Metadata catalogue</li>
        </ul>
-       <a href="https://docs.geonode.org/en/master/usage/data/finding_data.html" class="hide btn btn-success">Learn about GeoNode's discovery features</a>
+       <a href="{{ site.extbase.docs }}usage/data/finding_data.html" class="hide btn btn-success">Learn about GeoNode's discovery features</a>
      </div>
    </div>
  </div>
@@ -88,7 +88,7 @@ body_class: "geonode-features user-features"
            <li>Versioned geospatial data editor</li>
 
          </ul>
-         <a href="https://docs.geonode.org/en/master/usage/managing_datasets/index.html" class="hide btn btn-success">Learn about GeoNode's data management features</a>
+         <a href="{{ site.extbase.docs }}usage/managing_datasets/index.html" class="hide btn btn-success">Learn about GeoNode's data management features</a>
        </div>
      </div>
      <div class="col-4">
@@ -120,7 +120,7 @@ body_class: "geonode-features user-features"
         <li>Create multi-layer interactive maps</li>
         <li>Share and embed maps in web pages</li>
       </ul>
-      <a href="https://docs.geonode.org/en/master/usage/managing_maps/index.html" class="hide btn btn-success">Learn about GeoNode's mapping features</a>
+      <a href="{{ site.extbase.docs }}usage/managing_maps/index.html" class="hide btn btn-success">Learn about GeoNode's mapping features</a>
     </div>
   </div>
 </div>
