--- a/index.html
+++ b/index.html
@@ -10,89 +10,39 @@ title: GeoNode
 <section class="banner">
   <div class="container">
     <div class="row">
-        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 text-center">
-          <h1>Open Source Geospatial Content Management System</h1>
-          <p>
+        <div class="col-md-6 text-center">
+          <h1 class="fw-bold">Open Source Geospatial Content Management System</h1>
+          <p class="fs-4">
             GeoNode is a web-based application and platform
             for developing geospatial information systems (GIS)
             and for deploying spatial data infrastructures (SDI).
-          </p>
-          <p>
-            It is designed to be extended and modified, and can be integrated into existing platforms.
           </p>
           
           
           <div class="row justify-content-center">
 			  <div class="promo-links">
-				<a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="static/img/OSGeo_project.png"/></a>
+				<a title="OSGeo Project" href="http://osgeo.org"><img style="background-color:white;" alt="OSGeo Project" src="static/img/osgeo-logo.png"/></a>
 			  </div>
-			  <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8 btn btn-md btn-success mt-4 mb-4">See you in Florenze at FOSS4G 2022!
-				<p class="m-0">
-					<a class="text-white d-block" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/SJP7HC/" target="_blank">Introduction to GeoNode the Open Source geospatial CMS</a>
-					<a class="text-white d-block" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/FVRPWQ/" target="_blank">GeoNode a developers introduction</a>
-				</p>
-			  </div>
+        <div class="row demo-container">
+          <div class="col-md-4">
+          <h4 class="demo-btn maint"><a href="https://stable.demo.geonode.org">Maintenance</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/releases/tag/3.3.3" target="_blank">3.3.3</a></span>
+        </div>
+        <div class="col-md-4">
+          <h4 class="demo-btn stable"><a href="https://development.demo.geonode.org">Stable</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/releases/tag/4.0.1" target="_blank">4.0.1</a></span>
+        </div>
+        <div class="col-md-4">
+          <h4 class="demo-btn dev"><a href="https://master.demo.geonode.org">Development</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/tree/4.0.x" target="_blank">4.0.x</a></span>
+        </div>
+        </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 d">
-          <img src="static/img/hero_img.png" alt="" class="hero-img" />
+        <div class="col-md-6 text-end">
+          <img src="static/img/hero_img.png" alt="" class="hero-img" style="box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%) !important;"/>
         </div>
       </div>
-  </div>
-</section>
-<section class="body">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="box box-users">
-          <a href="{{ site.baseurl }}/user_features" class="header-link">
-            <header class="box-header">
-              <h2>For Users</h2>
-            </header>
-          </a>
-          <ul class="unstyled">
-            <li>Browse and search for geospatial data and web services</li>
-            <li>Upload, manage, and share geospatial data</li>
-            <li>Create and share interactive maps</li>
-            <li>Collaborate and interact with other users</li>
-          </ul>
-          <a href = "{{ site.baseurl }}/user_features" class="btn btn-success">Take the Tour</a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="box box-devs">
-          <a href="{{ site.baseurl }}/dev_features" class="header-link">
-            <header class="box-header">
-              <h2>For Developers</h2>
-            </header>
-          </a>
-          <ul class="unstyled">
-            <li>Developed with Django</li>
-            <li>Twitter Bootstrap and jQuery client implementation</li>
-            <li>Built on stable, mature open source geospatial projects</li>
-            <li>APIs for customization and connection</li>
-            <li>Seamless integration with third-party Django apps</li>
-          </ul>
-          <a href = "{{ site.baseurl }}/dev_features" class="btn btn-success">Take the Tour</a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="box box-admins">
-          <a href="{{ site.baseurl }}/admin_features" class="header-link">
-            <header class="box-header">
-              <h2>For Admins</h2>
-            </header>
-          </a>
-          <ul class="unstyled">
-            <li>Reliable, scalable platform for deploying spatial data infrastructure</li>
-            <li>Complete framework for OGC-compliant web services</li>
-            <li>Metadata management and aggregation platform</li>
-            <li>Comprehensive security framework</li>
-          </ul>
-          <a href = "{{ site.baseurl }}/admin_features" class="btn btn-success">Take the Tour</a>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
 
