--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@ title: GeoNode
 			  </div>
         <div class="row demo-container">
           <div class="col-md-4">
-          <h4 class="demo-btn maint"><a href="https://stable.demo.geonode.org">Maintenance</a></h4>
-          <span><a href="https://github.com/GeoNode/geonode/releases/tag/3.3.3" target="_blank">3.3.3</a></span>
-        </div>
-        <div class="col-md-4">
-          <h4 class="demo-btn stable"><a href="https://development.demo.geonode.org">Stable</a></h4>
+          <h4 class="demo-btn maint"><a href="https://stable.demo.geonode.org">Latest stable</a></h4>
           <span><a href="https://github.com/GeoNode/geonode/releases/tag/4.0.1" target="_blank">4.0.1</a></span>
         </div>
         <div class="col-md-4">
-          <h4 class="demo-btn dev"><a href="https://master.demo.geonode.org">Development</a></h4>
-          <span><a href="https://github.com/GeoNode/geonode/tree/4.0.x" target="_blank">4.0.x</a></span>
+          <h4 class="demo-btn stable"><a href="https://development.demo.geonode.org">Development</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/releases/tag/4.0.x" target="_blank">4.0.x</a></span>
+        </div>
+        <div class="col-md-4">
+          <h4 class="demo-btn dev"><a href="https://master.demo.geonode.org">Experimental</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/tree/master" target="_blank">master</a></span>
         </div>
         </div>
           </div>
