--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@ title: GeoNode
 			  </div>
         <div class="row demo-container">
           <div class="col-md-4">
-          <h4 class="demo-btn maint"><a href="https://stable.demo.geonode.org">Latest stable</a></h4>
+          <h4 class="demo-btn maint"><a href="https://stable.demo.geonode.org">Latest version</a></h4>
           <span><a href="https://github.com/GeoNode/geonode/releases/tag/4.0.3" target="_blank">4.0.3</a></span>
         </div>
         <div class="col-md-4">
-          <h4 class="demo-btn stable"><a href="https://development.demo.geonode.org">Development</a></h4>
-          <span><a href="https://github.com/GeoNode/geonode/tree/4.1.x" target="_blank">4.1.x</a></span>
+          <h4 class="demo-btn stable"><a href="https://development.demo.geonode.org">Stable branch</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/tree/4.0.x" target="_blank">4.0.x</a></span>
         </div>
         <div class="col-md-4">
-          <h4 class="demo-btn dev"><a href="https://master.demo.geonode.org">Experimental</a></h4>
+          <h4 class="demo-btn dev"><a href="https://master.demo.geonode.org">Development</a></h4>
           <span><a href="https://github.com/GeoNode/geonode/tree/master" target="_blank">master</a></span>
         </div>
         </div>
