--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,7 +6,7 @@ body_class: "geonode-features sites-gallery"
 
 <section class="banner">
   <div class="container">
-    <div class="row" style="padding-top: 11%; padding-bottom: 10%;">
+    <div class="row">
       <div class="col-sm">
         <h3>Welcome to the GeoNode gallery!</h3>
         <h4>Below are instances of GeoNode being used for achieving success across a wide variety of missions, including humanitarian, development, and environmental.</h4>
