--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: GeoNode
           <span><a href="https://github.com/GeoNode/geonode/releases/tag/4.4.4" target="_blank">4.4.4</a></span>
         </div>
         <div class="col-md-4">
-          <h4 class="demo-btn stable"><a href="https://github.com/GeoNode/geonode/tree/5.0.x" target="_blank">Stable branch</a></h4>
-          <span><a href="https://github.com/GeoNode/geonode/tree/5.0.x" target="_blank">5.0.x</a></span>
+          <h4 class="demo-btn stable"><a href="https://github.com/GeoNode/geonode/tree/4.4.x" target="_blank">Stable</a></h4>
+          <span><a href="https://github.com/GeoNode/geonode/tree/4.4.x" target="_blank">4.4.x</a></span>
         </div>
         <div class="col-md-4">
           <h4 class="demo-btn dev"><a href="https://github.com/GeoNode/geonode/tree/master" target="_blank">Development</a></h4>
